--- a/!DOCTYPE html.html
+++ b/!DOCTYPE html.html
@@ -4,70 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Seekers Dashboard</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
+            background-color: #f4f4f9;
         }
+        
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 20px;
+            padding: 20px 30px;
             text-align: center;
             width: 100%;
         }
+
         nav {
             background-color: #333;
-            padding: 15px;
+            padding: 20px;
             width: 250px;
             height: 100vh;
             color: white;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
         }
+
         nav a {
             color: white;
-            padding: 10px;
+            padding: 15px 20px;
             text-decoration: none;
-            font-size: 16px;
-            margin: 5px 0;
+            font-size: 18px;
+            margin: 10px 0;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
+
         nav a:hover {
             background-color: #575757;
         }
+
         .container {
             display: flex;
             flex: 1;
         }
+
         .content {
             margin-left: 250px;
-            padding: 20px;
+            padding: 30px;
             width: 100%;
+            background-color: #fff;
+            box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
+            border-radius: 10px;
+            margin-top: 20px;
         }
+
+        h1, h2 {
+            font-weight: 500;
+            color: #333;
+        }
+
         h2 {
             color: #4CAF50;
+            margin-top: 20px;
         }
+
         .resource-list {
-            margin: 20px 0;
+            margin-top: 20px;
         }
+
         .resource-list ul {
             list-style-type: none;
             padding-left: 0;
         }
+
         .resource-list li {
-            margin: 10px 0;
+            margin: 12px 0;
         }
+
+        .resource-list a {
+            color: #333;
+            font-size: 16px;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .resource-list a:hover {
+            color: #4CAF50;
+        }
+
         footer {
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            padding: 15px;
+            margin-top: 30px;
         }
     </style>
 </head>
@@ -80,16 +115,12 @@
 
 <div class="container">
     <nav>
-        <div>
-            <a href="#job-search">Job Search</a>
-            <a href="#upskilling">Upskilling & Learning</a>
-            <a href="#mental-health">Mental Health Support</a>
-            <a href="#resources">Resources & Links</a>
-        </div>
-        <div>
-            <a href="#financial">Financial Resources</a>
-            <a href="#job-fairs">Job Fairs & Networking</a>
-        </div>
+        <a href="#job-search">Job Search</a>
+        <a href="#upskilling">Upskilling & Learning</a>
+        <a href="#mental-health">Mental Health Support</a>
+        <a href="#resources">Resources & Links</a>
+        <a href="#financial">Financial Resources</a>
+        <a href="#job-fairs">Job Fairs & Networking</a>
     </nav>
 
     <div class="content">
